# autonomous_cleaning_robot

./: .gitignore  README.md  package.xml  setup.cfg  setup.py  topics.txt
config/: mapper_params_online_async.yaml  robot.rviz  ros_gz_bridge.yaml  slam_config.yaml
docs/: tactical_tuning.md
launch/: headless.launch.py  hybrid.launch.py  sim_gazebo.launch.py
legacy/dustbin/: ADMIN_SETUP_REQUIRED.ps1  Brain1_ESP32CAM.ino  Brain2_Survival.ino  NATIVE_WINDOWS_SETUP.txt  UBUNTU_SETUP.sh  What I have decided.txt  install_miniconda_admin.ps1  mastermind_cv_node.py  register_wsl.ps1  simulation_launch.py  smart_dustbin_simulation.html  test_webcam_mastermind.py  trajectory_predictor.py
legacy/my_first_package/: move_robot.py  my_node.py  package.xml  publisher_node.py  subscriber_node.py
legacy/robot_project/: main.py
legacy/robot_project/control/: controller.py
legacy/robot_project/perception/: obstacle_detection.py
legacy/robot_project/planning/: a_star.py  potential_field.py
legacy/robot_project/sensors/: camera_node.py  lidar_node.py
legacy/worlds/: world.sdf
models/: mecanum_bot.urdf
robot/: planner_global_astar.py  planner_local_apf.py  planner_local_fgm.py  planner_local_pid.py  planner_local_simple_apf.py
robot/tests/: diagnose_frames.py  verify_nav.py
worlds/: basic.world
