<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.1</version>
  <description>Artificial Potential Field (APF) local navigation for holonomic Mecanum-wheeled robots using ROS 2.</description>
  <maintainer email="robot_user@example.com">Robot Maintainer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
